# libaerodata

./: .clang-format  .gitignore  README.md  meson.build  modelica-mingw-win64.ini  setup.ps1  setup.sh
include/: AeroData.h  Tensor.h  Utils.h
src/: AeroData.cpp  ModelicaAeroData.cpp  Tensor.cpp  Utils.cpp
subprojects/cnpy/: cnpy.cpp  meson.build
tests/: benchmark.cpp  interpn-csv.cpp  test-utils.cpp  test-var.cpp  tocsv.cpp
